<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="start">START</string>
    <string name="Excersize_title">GET READY FOR</string>
    <string name="next">Coming Up: </string>
    <string name="instructions">instructions</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="finished">Finished!</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="done_message">You have done the workout!</string>
    <string name="r_u_sure">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="confirmation">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculator">CALCULATOR</string>
    <string name="weight_metric">Weight (in KG)</string>
    <string name="height_metric">Height (in CM)</string>
    <string name="calculate">CALCULATE</string>
    <string name="calendar">Calendar</string>
    <string name="history">HISTORY</string>
    <string name="entry">"Entry "</string>
    <string name="completed">EXERCISE COMPLETED</string>
    <string name="no_data">NO DATA AVAILABLE</string>
    <string name="choose_language">Choose Language</string>
    <string name="extremley_under_lable">Severely Underweight</string>
    <string name="extremley_under_des">You must eat more and gain some weight!</string>
    <string name="under_label">Underweight</string>
    <string name="under_des">Almost there! but you still need to gain some weight!</string>
    <string name="normal_label">Normal</string>
    <string name="normal_des">Great! You are at the normal level, and you probably are in good shape!</string>
    <string name="over_label">Overweight</string>
    <string name="over_des">You are overweight. You need to workout more and lose some weight.</string>
    <string name="mod_ob_label">Moderately Obese</string>
    <string name="mod_ob_des">You are obese. Though not life threatening, you need to workout more and lose some weight.</string>
    <string name="sev_ob_lable">Severely Obese</string>
    <string name="sev_ob_des">You are obese. You need to lose weight immediately, as it might be dangerous.</string>
    <string name="ext_ob_des">You are in a very dangerous state. Start losing weight and see to your doctor.</string>
    <string name="ext_ob_label">Extremley Obese</string>
    <string name="validation_basic">Please enter a valid value</string>
    <string name="choose_int">Choose Interval:</string>
    <string name="hebrew">Hebrew</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="quick_workout">Exercise: 30 Seconds, Rest: 10 Seconds</string>
    <string name="medium_workout">Exercise: 1 Minute, Rest: 20 Seconds</string>
    <string name="long_workout">Exercise: 2 Minutes, Rest: 30 Seconds</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="error_msg">Oops! Something went wrong!</string>
    <string name="entry_added">"Workout added successfully to history!"</string>
</resources>